--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "engines": {
+        "node": ">=22.12.0"
+    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
